--- a/index.html
+++ b/index.html
@@ -174,8 +174,8 @@
         </div>
         <div>
           <h2></h2>
-          <p>The Authomatic Disambiguation Author Name (ADAN) is a project that uses a multi-strategic approach to disambiguate authors' names in digital bibliographic repositories.</p>
-          <a href="https://gitlab.com/InfoKnow/SocialNetwork/sci_clan/adan" class="btn btn-primary">
+          <p>The Automatic Disambiguation Author Name (ADAN) is a project that integrates natural language processing techniques, graph-based learning, and clustering methods to disambiguate authors' names in digital bibliographic repositories.</p>
+          <a href="https://github.com/natansr/adan.git" class="btn btn-primary">
             Project Code
           </a>
         </div>
